# fritztv

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  config.toml
.github/workflows/: release.yml
packaging/deb/: Dockerfile  build-deb.sh
packaging/macos/: Dockerfile
packaging/rpm/: Dockerfile  build-rpm.sh  fritztv.service  fritztv.spec  fritztv.sysconfig  fritztv.sysusers
packaging/windows/: Dockerfile
src/: channels.rs  hls.rs  lib.rs  main.rs  manager.rs  metrics.rs  transcoder.rs
src/hardware/: cpu.rs  linux.rs  macos.rs  mod.rs  windows.rs
tests/: api_tests.rs
