[package]
name = "fritztv"
version = "0.5.0"
edition = "2021"
description = "A lightweight RTSP to fMP4/HLS transcoding server for FritzBox Cable tuners."
authors = ["DirkTheDaring <baldur@email.de>"]
repository = "https://github.com/DirkTheDaring/fritztv"
license = "MIT"
readme = "README.md"
keywords = ["fritzbox", "rtsp", "transcoding", "dvb-c", "streaming"]
categories = ["multimedia", "network-programming"]

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls", "stream"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
futures = "0.3"
bytes = "1"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
tokio-stream = { version = "0.1", features = ["net", "sync"] }
tokio-util = { version = "0.7", features = ["io"] }
tower = { version = "0.5.2", features = ["util"] }
serde_json = "1.0.148"
http-body-util = "0.1.3"
clap = { version = "4.5.54", features = ["derive"] }
config = "0.15.19"
